--- a/WebSiteAngular/src/app/components/menu/menu.component.html
+++ b/WebSiteAngular/src/app/components/menu/menu.component.html
@@ -1,1 +1,59 @@
-<p>menu works!</p>
+  <div class="header">
+  <nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid">
+      <a class="navbar-brand text-white" href="#">LOGO</a>
+      <button class="navbar-toggler" type="button" (click)="openMenu()" >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto d-flex align-items-center"  id="menu">
+              <li class="nav-item mx-5">
+              <a class="nav-link active" routerLink="/home" id="home"><span>Home</span></a>
+              </li>
+              <li class="nav-item mx-5">
+              <a class="nav-link" routerLink="/product" id="product"><span>Product</span></a>
+              </li>
+              <li class="nav-item mx-5">
+              <a class="nav-link" routerLink="about-us" id="about"><span>About-us</span></a>
+              </li>
+              <li class="nav-item mx-5">
+              </li>
+              <li class="nav-item">
+              <a class="nav-link" routerLink="/panier" id="panier"><i class="bi bi-cart" style="font-size: 19px;"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="/login" id="profil"><i class="bi bi-person-fill" style="font-size: 20px;"></i></a>
+                </li>
+        </ul>
+      </div>
+    </div>
+  </nav>  
+</div>
+<!-----SideBar------>
+<div class="sidebar">
+<ng-container *ngIf="status">
+  <div class="text-center" tabindex="-1" id="sidebar" aria-labelledby="offcanvasExampleLabel" >
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">LOGO</h5>
+      <button type="button" class="btn-close"
+      (click)="closeMenu()"></button>
+    </div>
+    <div class="offcanvas-body h-100">
+      <ul class="navbar-nav mx-auto">
+          <li class="nav-item my-4">
+            <a class="nav-link" aria-current="page" href="#"><i class="fa-solid fa-house" style="color: #000000;"></i> Home</a>
+          </li>
+          <li class="nav-item my-4">
+            <a class="nav-link" href="#"><i class="fa-solid fa-pizza-slice" style="color: #c94040;"></i>Product</a>
+          </li>
+          <li class="nav-item my-4">
+            <a class="nav-link" href="#"><i class="fa-solid fa-circle-info" style="color: #000000;"></i>About-us</a>
+          </li>
+          <li class="nav-item my-4">
+            <a class="nav-link" href="#"><i class="fa-solid fa-cart-plus" style="color: #000000;"></i>panier</a>
+          </li>
+        </ul>
+    </div>
+</div> 
+</ng-container> 
+</div>
