--- a/WebSiteAngular/src/app/components/menu/menu.component.html
+++ b/WebSiteAngular/src/app/components/menu/menu.component.html
@@ -8,21 +8,21 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto d-flex align-items-center"  id="menu">
               <li class="nav-item mx-5">
-              <a class="nav-link active" routerLink="/home" id="home"><span>Home</span></a>
+              <a class="nav-link" [routerLink]="['/home']" [class.active]="setActiveFilter('home')" id="home"><span>HOME</span></a>
               </li>
               <li class="nav-item mx-5">
-              <a class="nav-link" routerLink="/product" id="product"><span>Product</span></a>
+              <a class="nav-link" [routerLink]="['/product']" [class.active]="setActiveFilter('product')" id="product"><span>PRODUCT</span></a>
               </li>
               <li class="nav-item mx-5">
-              <a class="nav-link" routerLink="about-us" id="about"><span>About-us</span></a>
+              <a class="nav-link" [routerLink]="['about']"  [class.active]="setActiveFilter('about')" id="about"><span>ABOUT-US</span></a>
               </li>
               <li class="nav-item mx-5">
               </li>
               <li class="nav-item">
-              <a class="nav-link" routerLink="/panier" id="panier"><i class="bi bi-cart" style="font-size: 19px;"></i></a>
+              <a class="nav-link" [routerLink]="['panier']" id="panier"><i class="bi bi-cart" style="font-size: 19px;"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/login" id="profil"><i class="bi bi-person-fill" style="font-size: 20px;"></i></a>
+                <a class="nav-link" [routerLink]="['login']" id="profil"><i class="bi bi-person-fill" style="font-size: 20px;"></i></a>
                 </li>
         </ul>
       </div>
