--- a/WebSiteAngular/src/app/components/products/product/product.component.html
+++ b/WebSiteAngular/src/app/components/products/product/product.component.html
@@ -2,112 +2,135 @@
     <div class="container mt-4 h-100">
       <div class="row my-5">
         <div class="container p-1 bg-light rounded rounded-pill shadow-sm w-50">
-          <div class="input-group" >
+          <div class="input-group " >
             <div class="input-group-prepend z-2">
-              <button id="button-addon2" type="submit" class="btn btn-link text-warning"><i class="fa fa-search"></i></button>
+              <button id="button-addon2" type="submit" (click)="loadProduct()" class="btn btn-link text-warning"><i class="fa fa-search"></i></button>
             </div>
-            <input type="search" placeholder="What're you searching for?"  aria-describedby="button-addon2" class="form-control border-0 bg-light">
-            
+            <input type="search" placeholder="What're you searching for?" (input)="loadProduct()" [(ngModel)]="title" class="form-control border-0 bg-light">
                 <div class="input-group-prepend">
-                    <button id="button-addon2" data-bs-target="#filter" type="submit" class="btn btn-link text-warning" (click)="showFilterMenu()"><i *ngIf="!showFilter" class="bi bi-caret-down-fill"></i>
-                        <i *ngIf="showFilter" class="bi bi-caret-up-fill"></i></button>
+                    <button id="button-addon2" data-bs-target="#filter" type="submit" class="btn btn-link text-warning" (click)="showFilterMenu()">
+                      <i *ngIf="!showFilter" class="bi bi-caret-down-fill"></i>
+                      <i *ngIf="showFilter" class="bi bi-caret-up-fill"></i></button>
                 </div>
           </div>
+          <div *ngIf="showFilter" class="dropdown-menu show" id="filterMenu" style="display: block;">
+            <div class=" " id="filter">
+              <!-----Filtre 1------->
+              <div class=" rounded mx-3 my-1 p-1">
+                <h6>Catégorie :</h6>
+                <div class="container d-flex d-inline-block" >
+                  
+                  <div class="form-check mx-1" *ngFor="let c of categories">
+                    <input class="form-check-input" type="checkbox"  (change)="loadProductTag(c.id,$event)" id="idCheckBox" >
+                    <label class="form-check-label" for="idCheckBox">
+                      {{c.title}}
+                    </label>
+                
+                  </div>
+                </div>
+              
+              </div>
+              
+              <div class="row mx-3">
+                <!-----Filtre 2------->
+                <div class="col p-0 rounded" style="margin-right: 2%;">
+                  <h6 class="p-1">Base :</h6>
+                  <div class="container mx-1" >
+                    <div class="form-check ">
+                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="tomate" (input)="loadProductBase($event)">
+                      <label class="form-check-label" for="flexRadioDefault1">
+                        Tomate
+                      </label>
+                    </div>
+                    <div class="form-check ">
+                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="creme" (input)="loadProductBase($event)"  >
+                      <label class="form-check-label" for="flexRadioDefault2">
+                        Crème Fraiche
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <!------Filtre 3------>
+                <div class="col  rounded ">
+                  <h6 class="p-1">Prix :</h6>
+                  <div class="container mx-1" >
+                    
+                    <div class="range  " style="display: block;">
+                      <input id=""  value="2" type="range" min="1" max="3" step="1" data-slider-handle="custom" (input)="loadProductFilter()" [(ngModel)]="value"/>
+                    
+                      <div class="sliderticks " style="font-size: 12px;" >
+                        <span>5€-10€</span>
+                        <span>10€-15€</span>
+                        <span>>15€</span>
+                        
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="d-flex justify-content-end align-item-end p-0 ">
+                <button type="button" id="btnFiltre" (click)="loadAllProduct()">MISE A 0</button></div>
+              </div>
+            </div>
+          </div>
           
-          <ng-container *ngIf="showFilter">
-          <div class="border rounded bg-light h-100  " id="filter">
-            <a class="border mx-3 my-3">filter 3</a><a class="border mx-3 my-3">filter 2</a><a class="border mx-3 my-3">filter 1</a>
+          <div *ngIf="title" class="dropdown-menu show" id="searchMenu" style="display: block;" >
+            <div class="h-100 " id="filter">
+              <a *ngFor="let p of listproducts" class="dropdown-item" style="color:c76000;">{{p.title}}</a>
+            </div>
           </div>
-        </ng-container>
         </div>
-          
+        
+        
       </div>
-      <div class="row ">
-        <div class="col px-0 product">
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
+
+      <div class="row-flex">
+        <ng-container *ngFor="let p of listproducts">
+            <div [ngClass]="{'product' :productActif!=p,'productInfo' : productActif==p}">
+                <div  class="infoPlus"><a class="" (click)="afficherInfo(p)">
+                  <i class="bi bi-file-plus-fill"></i>
+                  <i *ngIf="productActif==p" class="bi bi-file-minus-fill"></i></a></div>
+                <img class="fill" src="{{p.image}}" alt="product image" />
+                <div class="position-absolute bottom-0 start-0 mx-2">
+                    <h6 style="font-size: 15px;">{{p.title}}</h6>
+                    <p style="font-size: 15px;">{{p.price}} €</p>
+                    <!-- <p>{{p.description}}</p> -->
+                </div>
             </div>
-          </div>
-          <div class="col px-0 product">
-           
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
-            </div>
-          </div>
-  
-          <div class="col px-0 product">
-           
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
-            </div>
-          </div>
-        <div class="col px-0 product">
-         
-          <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-          <div class="position-absolute bottom-0 start-0 mx-2">
-            <h5>titre produit</h5>
-            <p>description rapide</p>
-          </div>
-        </div>
-        <div class="col px-0 product">
-          <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-          <div class="position-absolute bottom-0 start-0 mx-2">
-            <h5>titre produit</h5>
-            <p>description rapide</p>
-          </div>
-        </div>
-      </div>
-        <div class="row">
-          <div class="col px-0 product">
+            <ng-container *ngIf="productActif==p">
+            <div class="infoProduct bg-light">
             
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
+                <h6 class="productTitle mx-2 my-2">{{p.title}}</h6>
+                <span class="mx-2 ">{{p.price}} €</span>
+            
+                <div class="star-rating mx-2 my-1 ">
+                  <div class="percent" [ngStyle]="{width:rating+'%'}"></div>
+                </div>
+             
+              <div class="d-flex flex-row container ingredient-container ">
+              <ng-container *ngFor="let i of ingredients">
+                    <div class="ingredient">{{i.name}},</div>
+
+                 </ng-container>
+                </div> 
+              <div class="d-flex flex-row container tags mx-2 mt-1">
+                <ng-container *ngFor="let c of categoriesProduct">
+                  <img src="{{c.vignette}}" width="20%" height="20%" class="mx-1">
+                 </ng-container>
+                
+              </div>
+               
+             
+              
             </div>
-          </div>
-          <div class="col px-0 product">
-           
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
-            </div>
-          </div>
+          </ng-container>
+        </ng-container>
+    </div>
     
-          <div class="col px-0 product">
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <img class="fill"  src="https://img.passeportsante.net/1200x675/2022-10-20/shutterstock-2009487272.webp" alt="MDN Logo" />
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
-            </div>
-          </div>
-          <div class="col px-0 product">
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
-            </div>
-          </div>
-          <div class="col px-0 product">
-            <div class="infoPlus"><i class="bi bi-plus-square"></i></div>
-            <div class="position-absolute bottom-0 start-0 mx-2">
-              <h5>titre produit</h5>
-              <p>description rapide</p>
-            </div>
-          </div>
-  
-        </div>
+    
       
   
     </div>
   
   
   </main>
+
