--- a/WebSiteAngular/src/styles.css
+++ b/WebSiteAngular/src/styles.css
@@ -1,10 +1,13 @@
 @import url("bootstrap-icons/font/bootstrap-icons.css");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
+
 *{
     padding: 0;
     margin: 0;
 }
 body{
-    background-color: black;
-    color: white;
+   background-color: #000000;
+   
 }
