--- a/WebSiteAngular/src/app/components/about/info/info.component.html
+++ b/WebSiteAngular/src/app/components/about/info/info.component.html
@@ -1,3 +1,56 @@
-<div class="">
-
-</div>
+<section class="vh-100">
+    <div class="container-fluid h-custom">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+          <img src="/src/assets/pizza2.png"
+            class="img-fluid" alt="Sample image">
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <form>
+            <div class="row d-flex flex-row align-items-center justify-content-center justify-content-lg-start" id="titre">
+                    <h4 class="mb-0 me-3 mt-2">WELCOME BACK</h4>
+                    <h6 class="mt-2"><span class="fw-bolder">Sign up</span>with your Username and Password</h6>
+                
+            </div>
+  
+            <div class="divider d-flex align-items-center my-4" id="divider">
+              <p class="text-center fw-bold mx-3 mb-0">Or</p>
+            </div>
+  
+            <!-- Username input -->
+            <div class="form-group mt-4">
+                <label for="exampleInputEmail1" id="usernameLabel">Username</label>
+                <input type="username" class="form-control" id="username" aria-describedby="username" placeholder="Enter username">
+            </div>
+            <!-- Password input -->
+            <div class="form-group mt-4">
+                <label for="exampleInputEmail1" id="passwordLabel">Password</label>
+                <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Enter password">
+            </div>
+  
+            <div class="d-flex justify-content-between align-items-center">
+              <!-- Checkbox -->
+              <div class="form-check mb-0">
+                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
+                <label class="form-check-label" for="form2Example3">
+                  Remember me
+                </label>
+              </div>
+              <a href="#!" class="text-body" class="mdpForgot">Forgot password?</a>
+            </div>
+  
+            <div class="text-center text-lg-start mt-4 pt-2">
+              <button type="button" class="btn btn-primary btn-lg"
+                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+              <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!"
+                  class="link-danger">Register</a></p>
+            </div>
+  
+          </form>
+        </div>
+      </div>
+    </div>
+    <div
+      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+    </div>
+  </section>
