--- a/WebSiteAngular/src/app/components/products/product/product.component.css
+++ b/WebSiteAngular/src/app/components/products/product/product.component.css
@@ -20,6 +20,8 @@
 .product h6, .product p{
     font-weight: bold;
     color: rgb(245, 236, 236);
+    font-family: 'Oswald';
+    letter-spacing: 1px;
 }
 
 .infoPlus{
@@ -67,6 +69,10 @@
     font-weight: bold;
     color: rgb(245, 236, 236);
 }
+.productInfo h6,.productInfo p{
+  font-family: 'Oswald';
+}
+
 .productTitle{
     color:#c76000                                                                        
 }
@@ -80,10 +86,22 @@
     width: 200px;
     color: #000;
 }
+
+.infoProduct h6{
+  font-family: 'Oswald';
+  letter-spacing: 1px;
+}
+
+.infoProduct span{
+  font-family: 'Dosis';
+  letter-spacing: 1px;
+}
 .ingredient{
    flex: auto;
-   
-    padding: 0;
+   font-family: 'Dosis';
+   letter-spacing: 1px;
+   font-weight: 500;
+   padding: 0;
 }
 
 .ingredient-container{
