--- a/WebSiteAngular/src/app/components/profil/register/register.component.css
+++ b/WebSiteAngular/src/app/components/profil/register/register.component.css
@@ -119,7 +119,7 @@
     font-family: 'Dosis';
     font-size: 16px;
 }
-#usernameLabel,#passwordLabel{
+#label{
     font-family: 'Oswald';
     letter-spacing: 0.7px;
     font-size: 16px;
