--- a/WebSiteAngular/src/styles.css
+++ b/WebSiteAngular/src/styles.css
@@ -11,5 +11,8 @@
 }
 body{
    background-color: #000000;
-   
+   min-width: 766px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
