--- a/WebSiteAngular/src/app/components/profil/connexion/connexion.component.html
+++ b/WebSiteAngular/src/app/components/profil/connexion/connexion.component.html
@@ -9,7 +9,7 @@
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-9 col-lg-6 col-xl-5 px-4 login">
-          <form>
+          <form [formGroup]="formulaireCo">
             <div class="row d-flex flex-row align-items-center justify-content-center justify-content-lg-center text-center" id="titre">
                     <h4 class="mb-0 me-3 mt-2">WELCOME BACK</h4>
                     <h6 class="mt-2"><span class="fw-bolder">Sign up</span> with your Username and Password</h6>
@@ -21,14 +21,22 @@
             <!-- Username input -->
             <div class="form-group mt-4">
                 <label for="exampleInputEmail1" id="usernameLabel">Username</label>
-                <input type="username" class="form-control" id="username" aria-describedby="username" placeholder="Enter username">
+                <input type="username" class="form-control" id="username" 
+                formControlName="username"
+                aria-describedby="username" placeholder="Enter username">
             </div>
+            <small id="msgErr" *ngIf="formulaireCo.get('username')?.invalid && formulaireCo.get('username')?.touched">
+              /!\ Username is Required</small>
             <!-- Password input -->
             <div class="form-group mt-4">
                 <label for="exampleInputEmail1" id="passwordLabel">Password</label>
-                <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Enter password">
+                <input type="password" class="form-control" id="password" 
+                formControlName="password"
+                aria-describedby="password" placeholder="Enter password">
             </div>
-  
+            <small id="msgErr" *ngIf="formulaireCo.get('password')?.invalid && formulaireCo.get('password')?.touched">
+              /!\ password is required</small>
+
             <div class="d-flex justify-content-between align-items-center" id="info">
               <!-- Checkbox -->
               <div class="form-check mb-0 mt-3" >
@@ -39,14 +47,16 @@
               </div>
               <a href="#!" class="text-body" class="mdpForgot text-white">Forgot password?</a>
             </div>
-  
+            
+            <!--  Button Login -->
             <div class="form-group mt-4" id="btnL">
-                <button type="submit" class="btn" id="btnLogin"><span>Login</span></button>
+                <button type="submit" class="btn" id="btnLogin" (click)="connect()" [disabled]="formulaireCo.invalid"><span>Login</span></button>
             </div>
+
             <!--  Divider -->
             <div class="divider d-flex align-items-center mt-3" id="divider">
                 <p class="text-center fw-bold mx-3 mb-0">Or</p>
-              </div>
+              </div> 
           </form>
         <div class="buttons d-flex justify-content-center ">
             <div class="form-group" id="btnG">
